Fixed bug in create account password field, now activates login when enter is pressed. TODO: fix but with google app engine endpoints

--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -46,7 +46,7 @@
             <Label fx:id="confirmPasswordLabel" text="Confirm Password: " GridPane.columnIndex="0" GridPane.rowIndex="5"
                    styleClass="textfieldLabel"/>
             <PasswordField fx:id="passwordField2" text="" GridPane.columnIndex="1" GridPane.rowIndex="5"
-                           styleClass="textfield" onKeyPressed="#createAccount"/>
+                           styleClass="textfield" onKeyPressed="#createAccountEnter"/>
 
             <Button fx:id="createAccountButton" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="6"
                     onMouseClicked="#createAccount" styleClass="button"/>
