--- a/res/hud.css
+++ b/res/hud.css
@@ -20,3 +20,15 @@
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
 }
+
+.button {
+    -fx-padding: 3;
+    -fx-background-color: ghostwhite;
+    -fx-text-alignment: center;
+    -fx-text-fill: #333333;
+    -fx-font-size: 15;
+    -fx-font-family: "Bebas Kai";
+    -fx-effect: dropshadow(three-pass-box, lightgray, 5, 0, 0, 0);
+    -fx-background-radius: 15 15 15 15;
+    -fx-cursor: hand;
+}
