made sure hud css was the same in both locations and gave credit to inspiration from Anshu and Januarrio in comments #51

--- a/res/hud.css
+++ b/res/hud.css
@@ -1,3 +1,5 @@
+/* CSS inspired by Januario's and Anshu's for the Player and GameCenter */
+
 .label {
     -fx-font-family: "Trebuchet MS";
     -fx-text-fill: white;
