--- a/src/hud/hud.css
+++ b/src/hud/hud.css
@@ -1,3 +1,5 @@
+/* CSS inspired by Januario's and Anshu's for the Player and GameCenter */
+
 .label {
     -fx-font-family: "Trebuchet MS";
     -fx-text-fill: white;
@@ -19,4 +21,16 @@
     -fx-background-radius: 5;
     -fx-hbar-policy: never;
     -fx-vbar-policy: never;
+}
+
+.button {
+    -fx-padding: 3;
+    -fx-background-color: ghostwhite;
+    -fx-text-alignment: center;
+    -fx-text-fill: #333333;
+    -fx-font-size: 15;
+    -fx-font-family: "Bebas Kai";
+    -fx-effect: dropshadow(three-pass-box, lightgray, 5, 0, 0, 0);
+    -fx-background-radius: 15 15 15 15;
+    -fx-cursor: hand;
 }
