--- a/res/network_fxml/styles/networkstyle.css
+++ b/res/network_fxml/styles/networkstyle.css
@@ -5,12 +5,12 @@
 }
 
 .button{
-    -fx-pref-width: 100;
+    -fx-pref-width: 200;
     -fx-pref-heigh: 20;
     -fx-background-color: GHOSTWHITE;
     -fx-text-fill: black;
     -fx-background-radius: 20 20 20 20;
-    -fx-font-family: Bebaskai;
+    -fx-font-family: Impact;
     -fx-effect: dropshadow( gaussian , GHOSTWHITE , 0,0,0,2 );
 }
 
@@ -27,14 +27,14 @@
 
 .prompt{
     -fx-text-fill: white;
-    -fx-font-family: Bebaskai;
+    -fx-font-family: Impact;
     -fx-font-size: 20;
     -fx-fill: white;
 }
 
 .textfieldLabel {
     -fx-font-size: 20;
-    -fx-font-family: Bebaskai;
+    -fx-font-family: Impact;
     -fx-text-fill: white;
 }
 .textfield {
@@ -50,6 +50,6 @@
 
 .titleLabel{
     -fx-text-fill: white;
-    -fx-font-family: Bebaskai;
+    -fx-font-family: Impact;
     -fx-font-size: 32;
 }
