Added slider for rating a game, continuing work on #17

--- a/classes/production/voogasalad_crackingopen/GUI/GameCenter.fxml
+++ b/classes/production/voogasalad_crackingopen/GUI/GameCenter.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -15,9 +16,9 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="parentPane" prefHeight="525.0" prefWidth="975.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameCenter.main.GameCenterController">
+<AnchorPane id="parentPane" prefHeight="500.0" prefWidth="975.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="GameCenter.main.GameCenterController">
 
-    <padding><Insets bottom="25.0" left="25.0" top="25.0" /></padding>
+    <padding><Insets left="25.0" top="25.0" /></padding>
 
     <stylesheets><URL value="@GUIStyle.css" /></stylesheets>
 
@@ -33,7 +34,7 @@
     <Pane fx:id="socialPane" layoutX="25" layoutY="85.0" prefHeight="390.0" prefWidth="200" styleClass="centerPane" />
 
     <!-- Title pane -->
-    <HBox alignment="CENTER" layoutX="250.0" layoutY="20.0" prefHeight="50.0" prefWidth="137.0" styleClass="centerPane">
+    <HBox alignment="CENTER" layoutX="250.0" layoutY="20.0" prefHeight="50.0" prefWidth="0.0" styleClass="centerPane">
         <padding>
          <Insets bottom="5" left="5" right="5" top="5" />
       </padding>
@@ -43,7 +44,7 @@
     <!-- Favorite Pane -->
    <Pane layoutX="625.0" layoutY="20.0" prefHeight="50.0" prefWidth="50.0" styleClass="centerPane" />
 
-    <!-- Description Pane -->
+    <!-- Description Box StackPane -->
    <StackPane layoutX="250.0" layoutY="85.0" prefHeight="390.0" prefWidth="425.0" styleClass="centerPane">
       <children>
           <Pane fx:id="newGamePane" prefHeight="390" prefWidth="425" styleClass="centerPane">
@@ -54,6 +55,7 @@
                   </font></Button>
             </children>
           </Pane>
+          <!-- Description Pane -->
          <Pane fx:id="descriptionPane" prefHeight="200.0" prefWidth="200.0" styleClass="descriptionPane" visible="false">
             <children>
                 <VBox layoutX="20" layoutY="150" prefWidth="385" styleClass="descriptionTextPane">
@@ -64,9 +66,13 @@
                 <Button fx:id="rateButton" layoutX="269.0" layoutY="264.0" mnemonicParsing="false" onAction="#rateGame" styleClass="largeButton" text="Rate" />
             </children>
          </Pane>
-          <!-- Where rating pane will go -->
-         <Pane fx:id="ratingPane" prefHeight="390.0" prefWidth="425.0" styleClass="centerPane" visible="false">
-         </Pane>
+          <!-- Rating Pane -->
+         <Pane fx:id="ratingPane" prefHeight="390.0" prefWidth="425.0" styleClass="centerPane">
+            <children>
+               <Slider fx:id="ratingSlider" blockIncrement="1.0" layoutX="25.0" layoutY="195.0" majorTickUnit="1.0" max="5.0" minorTickCount="1" prefHeight="50.0" prefWidth="375.0" showTickMarks="true" snapToTicks="true" />
+               <Button fx:id="returnButton" layoutX="163.0" layoutY="261.0" mnemonicParsing="false" onAction="#returnToDescription" styleClass="largeButton" text="Return" />
+               <Text fx:id="ratingText" layoutX="190.0" layoutY="181.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="paneText" text="0.00" />
+            </children></Pane>
       </children>
    </StackPane>
    <Pane layoutX="25.0" layoutY="20.0" prefHeight="55.0" prefWidth="200.0" styleClass="centerPane" visible="false">
