--- a/classes/production/voogasalad_crackingopen/GUI/GUIStyle.css
+++ b/classes/production/voogasalad_crackingopen/GUI/GUIStyle.css
@@ -6,8 +6,23 @@
     -fx-background-color: #808080;
 }
 
-.thumbnail {
+.slider .track {
+    -fx-pref-height:20;
+}
 
+.slider {
+    -fx-accent: ghostwhite;
+    -fx-border: black;
+}
+
+.slider:vertical .track {
+    -fx-pref-width:20;
+}
+
+.slider .thumb {
+    -fx-pref-height: 30;
+    -fx-pref-width: 30;
+    -fx-background-color: black;
 }
 
 .paneText {
