--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -4,57 +4,59 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="network_account.CreateAccountController"
-            prefHeight="400.0" prefWidth="600.0" styleClass="borderPane">
-    <center>
-        <GridPane alignment="center" hgap="25" vgap="10"
-                  prefHeight="300.0" prefWidth="500.0" styleClass="gridPane">
+<!--<StackPane xmlns="http://javafx.com/javafx"-->
+            <!--xmlns:fx="http://javafx.com/fxml"-->
+            <!--fx:controller="network_account.CreateAccountController"-->
+            <!--prefHeight="400.0" prefWidth="600.0" styleClass="borderPane">-->
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="network_account.CreateAccountController"
+          alignment="center" hgap="25" vgap="10"
+          prefHeight="350.0" prefWidth="550.0" styleClass="gridPane">
 
-            <padding><Insets left="15" right="15"/></padding>
+    <padding><Insets left="15" right="15"/></padding>
 
 
-            <columnConstraints>
-                <ColumnConstraints percentWidth="50"  />
-                <ColumnConstraints percentWidth="50" />
-            </columnConstraints>
+    <columnConstraints>
+        <ColumnConstraints percentWidth="50"  />
+        <ColumnConstraints percentWidth="50" />
+    </columnConstraints>
 
-            <Label fx:id="accountLabel" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="0"
-                   styleClass="titleLabel"/>
+    <Label fx:id="accountLabel" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="0"
+           styleClass="titleLabel"/>
 
-            <Label fx:id="emailLabel" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="1"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="emailTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="1"
-                       styleClass="textfield"/>
+    <Label fx:id="emailLabel" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="1"
+           styleClass="textfieldLabel"/>
+    <TextField fx:id="emailTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="1"
+               styleClass="textfield"/>
 
-            <Label fx:id="usernameLabel" text="Username: " GridPane.columnIndex="0" GridPane.rowIndex="2"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="usernameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                       styleClass="textfield"/>
+    <Label fx:id="usernameLabel" text="Username: " GridPane.columnIndex="0" GridPane.rowIndex="2"
+           styleClass="textfieldLabel"/>
+    <TextField fx:id="usernameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="2"
+               styleClass="textfield"/>
 
-            <Label fx:id="displayNameLabel" text="Display Name: " GridPane.columnIndex="0" GridPane.rowIndex="3"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="displayNameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="3"
-                       styleClass="textfield"/>
+    <Label fx:id="displayNameLabel" text="Display Name: " GridPane.columnIndex="0" GridPane.rowIndex="3"
+           styleClass="textfieldLabel"/>
+    <TextField fx:id="displayNameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="3"
+               styleClass="textfield"/>
 
-            <Label fx:id="passwordLabel" text="Password: " GridPane.columnIndex="0" GridPane.rowIndex="4"
-                   styleClass="textfieldLabel"/>
-            <PasswordField fx:id="passwordField1" text="" GridPane.columnIndex="1" GridPane.rowIndex="4"
-                           styleClass="textfield"/>
+    <Label fx:id="passwordLabel" text="Password: " GridPane.columnIndex="0" GridPane.rowIndex="4"
+           styleClass="textfieldLabel"/>
+    <PasswordField fx:id="passwordField1" text="" GridPane.columnIndex="1" GridPane.rowIndex="4"
+                   styleClass="textfield"/>
 
-            <Label fx:id="confirmPasswordLabel" text="Confirm Password: " GridPane.columnIndex="0" GridPane.rowIndex="5"
-                   styleClass="textfieldLabel"/>
-            <PasswordField fx:id="passwordField2" text="" GridPane.columnIndex="1" GridPane.rowIndex="5"
-                           styleClass="textfield" onKeyPressed="#createAccountEnter"/>
+    <Label fx:id="confirmPasswordLabel" text="Confirm Password: " GridPane.columnIndex="0" GridPane.rowIndex="5"
+           styleClass="textfieldLabel"/>
+    <PasswordField fx:id="passwordField2" text="" GridPane.columnIndex="1" GridPane.rowIndex="5"
+                   styleClass="textfield" onKeyPressed="#createAccountEnter"/>
 
-            <Button fx:id="createAccountButton" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="6"
-                    onMouseClicked="#createAccount" styleClass="button"/>
-            <Label fx:id="failLabel" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" styleClass="errorLabel"/>
-        </GridPane>
-    </center>
-
+    <Button fx:id="createAccountButton" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="6"
+            onMouseClicked="#createAccount" styleClass="button"/>
+    <Label fx:id="failLabel" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" styleClass="errorLabel"/>
     <stylesheets>
         <URL value="@styles/networkstyle.css" />
     </stylesheets>
-</BorderPane>
+</GridPane>
+
+
+<!--</StackPane>-->
