Added heart icon to top right corner to have a visual for favorite game

--- a/res/GUI/GUIStyle.css
+++ b/res/GUI/GUIStyle.css
@@ -91,6 +91,10 @@
     -fx-background-radius: 15 15 0 0;
 }
 
+.favoriteButton {
+    -fx-background-color: transparent;
+}
+
 .largeButton {
     -fx-background-color: ghostwhite;
     -fx-font-family: Impact;
