--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -4,14 +4,12 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<!--<StackPane xmlns="http://javafx.com/javafx"-->
-            <!--xmlns:fx="http://javafx.com/fxml"-->
-            <!--fx:controller="network_account.CreateAccountController"-->
-            <!--prefHeight="400.0" prefWidth="600.0" styleClass="borderPane">-->
-<GridPane xmlns="http://javafx.com/javafx"
-          xmlns:fx="http://javafx.com/fxml"
-          fx:controller="network_account.CreateAccountController"
-          alignment="center" hgap="25" vgap="10"
+<StackPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="network_account.CreateAccountController"
+            prefHeight="400.0" prefWidth="600.0" styleClass="borderPane" fx:id="parentContainer">
+<GridPane
+          alignment="center" hgap="25" vgap="10" fx:id="gridPane"
           prefHeight="350.0" prefWidth="550.0" styleClass="gridPane">
 
     <padding><Insets left="15" right="15"/></padding>
@@ -24,6 +22,8 @@
 
     <Label fx:id="accountLabel" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="0"
            styleClass="titleLabel"/>
+
+    <Button fx:id="loginButton" text="Return to Login" GridPane.columnIndex="1" GridPane.rowIndex="0" onMouseClicked="#returnToLogin"/>
 
     <Label fx:id="emailLabel" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="1"
            styleClass="textfieldLabel"/>
@@ -59,4 +59,4 @@
 </GridPane>
 
 
-<!--</StackPane>-->
+</StackPane>
