--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -4,11 +4,10 @@
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
 <?import javafx.geometry.Insets?>
-<StackPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="network_account.CreateAccountController"
-            prefHeight="400.0" prefWidth="600.0" styleClass="borderPane" fx:id="parentContainer">
-<GridPane
+
+<GridPane xmlns="http://javafx.com/javafx"
+          xmlns:fx="http://javafx.com/fxml"
+          fx:controller="network_account.CreateAccountController"
           alignment="center" hgap="25" vgap="10" fx:id="gridPane"
           prefHeight="350.0" prefWidth="550.0" styleClass="gridPane">
 
@@ -59,4 +58,3 @@
 </GridPane>
 
 
-</StackPane>
