--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -1,60 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<?import javafx.geometry.Insets?>
-<BorderPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="network_account.CreateAccountController"
-            prefHeight="400.0" prefWidth="600.0" styleClass="borderPane">
-    <center>
-        <GridPane alignment="center" hgap="25" vgap="10"
-                  prefHeight="300.0" prefWidth="500.0" styleClass="gridPane">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-            <padding><Insets left="15" right="15"/></padding>
-
-
-            <columnConstraints>
-                <ColumnConstraints percentWidth="50"  />
-                <ColumnConstraints percentWidth="50" />
-            </columnConstraints>
-
-            <Label fx:id="accountLabel" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="0"
-                   styleClass="titleLabel"/>
-
-            <Label fx:id="emailLabel" text="Email: " GridPane.columnIndex="0" GridPane.rowIndex="1"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="emailTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="1"
-                       styleClass="textfield"/>
-
-            <Label fx:id="usernameLabel" text="Username: " GridPane.columnIndex="0" GridPane.rowIndex="2"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="usernameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="2"
-                       styleClass="textfield"/>
-
-            <Label fx:id="displayNameLabel" text="Display Name: " GridPane.columnIndex="0" GridPane.rowIndex="3"
-                   styleClass="textfieldLabel"/>
-            <TextField fx:id="displayNameTextField" text="" GridPane.columnIndex="1" GridPane.rowIndex="3"
-                       styleClass="textfield"/>
-
-            <Label fx:id="passwordLabel" text="Password: " GridPane.columnIndex="0" GridPane.rowIndex="4"
-                   styleClass="textfieldLabel"/>
-            <PasswordField fx:id="passwordField1" text="" GridPane.columnIndex="1" GridPane.rowIndex="4"
-                           styleClass="textfield"/>
-
-            <Label fx:id="confirmPasswordLabel" text="Confirm Password: " GridPane.columnIndex="0" GridPane.rowIndex="5"
-                   styleClass="textfieldLabel"/>
-            <PasswordField fx:id="passwordField2" text="" GridPane.columnIndex="1" GridPane.rowIndex="5"
-                           styleClass="textfield" onKeyPressed="#createAccountEnter"/>
-
-            <Button fx:id="createAccountButton" text="Create Account" GridPane.columnIndex="0" GridPane.rowIndex="6"
-                    onMouseClicked="#createAccount" styleClass="button"/>
-            <Label fx:id="failLabel" text="" GridPane.columnIndex="1" GridPane.rowIndex="6" styleClass="errorLabel"/>
-        </GridPane>
-    </center>
-
+<Pane fx:id="parentContainer" prefHeight="400.0" prefWidth="450.0" styleClass="centerPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="network_account.CreateAccountController">
     <stylesheets>
-        <URL value="@styles/networkstyle.css" />
+        <URL value="@../GUI/GUIStyle.css" />
     </stylesheets>
-</BorderPane>
+
+ <Label fx:id="accountLabel" layoutX="38.0" layoutY="50.0" styleClass="titleLabel" text="Create Account" />
+
+ <Button fx:id="loginButton" layoutX="342.0" layoutY="350.0" onMouseClicked="#returnToLogin" styleClass="smallButton" text="RETURN" />
+ <TextField fx:id="emailTextField" layoutX="38.0" layoutY="100.0" prefHeight="33.0" prefWidth="375.0" promptText="EMAIL" text="">
+      <font>
+         <Font name="Impact" size="16.0" />
+      </font></TextField>
+ <TextField fx:id="usernameTextField" layoutX="38.0" layoutY="150.0" prefWidth="375.0" promptText="USERNAME" text="">
+      <font>
+         <Font name="Impact" size="16.0" />
+      </font></TextField>
+ <TextField fx:id="displayNameTextField" layoutX="38.0" layoutY="200.0" prefWidth="375.0" promptText="DISPLAY NAME" text="">
+      <font>
+         <Font name="Impact" size="16.0" />
+      </font></TextField>
+ <PasswordField fx:id="passwordField1" layoutX="38.0" layoutY="250.0" prefWidth="375.0" promptText="PASSWORD" text="">
+      <font>
+         <Font name="Impact" size="16.0" />
+      </font></PasswordField>
+ <PasswordField fx:id="passwordField2" layoutX="38.0" layoutY="300.0" onKeyPressed="#createAccountEnter" prefWidth="375.0" promptText="CONFIRM PASSWORD" text="">
+      <font>
+         <Font name="Impact" size="16.0" />
+      </font></PasswordField>
+
+ <Button fx:id="createAccountButton" layoutX="38.0" layoutY="350.0" onMouseClicked="#createAccount" styleClass="smallButton" text="Create Account" />
+ <Label fx:id="failLabel" styleClass="errorLabel" text="" />
+
+
+</Pane>
