Added an AnchorPane same size as login's AnchorPane to createAccount.fxml to fix transition

--- a/classes/production/voogasalad_crackingopen/network_fxml/createaccount.fxml
+++ b/classes/production/voogasalad_crackingopen/network_fxml/createaccount.fxml
@@ -5,40 +5,44 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane fx:id="parentContainer" prefHeight="400.0" prefWidth="450.0" styleClass="centerPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="network_account.CreateAccountController">
+<AnchorPane id="parentPane" fx:id="parentContainer" prefHeight="525.0" prefWidth="975.0" styleClass="centerPane" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="network_account.CreateAccountController">
     <stylesheets>
         <URL value="@../GUI/GUIStyle.css" />
     </stylesheets>
+    <Pane fx:id="mainPane" layoutX="263.0" layoutY="63.0" prefHeight="400.0" prefWidth="450.0" styleClass="centerPane">
+        <children>
 
- <Label fx:id="accountLabel" layoutX="38.0" layoutY="50.0" styleClass="titleLabel" text="Create Account" />
+         <Label fx:id="accountLabel" layoutX="38.0" layoutY="50.0" styleClass="titleLabel" text="Create Account" />
 
- <Button fx:id="loginButton" layoutX="342.0" layoutY="350.0" onAction="#returnToLogin" styleClass="smallButton" text="RETURN" />
- <TextField fx:id="emailTextField" layoutX="38.0" layoutY="100.0" prefHeight="33.0" prefWidth="375.0" promptText="EMAIL" text="">
-      <font>
-         <Font name="Impact" size="16.0" />
-      </font></TextField>
- <TextField fx:id="usernameTextField" layoutX="38.0" layoutY="150.0" prefWidth="375.0" promptText="USERNAME" text="">
-      <font>
-         <Font name="Impact" size="16.0" />
-      </font></TextField>
- <TextField fx:id="displayNameTextField" layoutX="38.0" layoutY="200.0" prefWidth="375.0" promptText="DISPLAY NAME" text="">
-      <font>
-         <Font name="Impact" size="16.0" />
-      </font></TextField>
- <PasswordField fx:id="passwordField1" layoutX="38.0" layoutY="250.0" prefWidth="375.0" promptText="PASSWORD" text="">
-      <font>
-         <Font name="Impact" size="16.0" />
-      </font></PasswordField>
- <PasswordField fx:id="passwordField2" layoutX="38.0" layoutY="300.0" onKeyPressed="#createAccountEnter" prefWidth="375.0" promptText="CONFIRM PASSWORD" text="">
-      <font>
-         <Font name="Impact" size="16.0" />
-      </font></PasswordField>
+         <Button fx:id="loginButton" layoutX="342.0" layoutY="350.0" onAction="#returnToLogin" styleClass="smallButton" text="RETURN" />
+         <TextField fx:id="emailTextField" layoutX="38.0" layoutY="100.0" prefHeight="33.0" prefWidth="375.0" promptText="EMAIL" text="">
+              <font>
+                 <Font name="Impact" size="16.0" />
+              </font></TextField>
+         <TextField fx:id="usernameTextField" layoutX="38.0" layoutY="150.0" prefWidth="375.0" promptText="USERNAME" text="">
+              <font>
+                 <Font name="Impact" size="16.0" />
+              </font></TextField>
+         <TextField fx:id="displayNameTextField" layoutX="38.0" layoutY="200.0" prefWidth="375.0" promptText="DISPLAY NAME" text="">
+              <font>
+                 <Font name="Impact" size="16.0" />
+              </font></TextField>
+         <PasswordField fx:id="passwordField1" layoutX="38.0" layoutY="250.0" prefWidth="375.0" promptText="PASSWORD" text="">
+              <font>
+                 <Font name="Impact" size="16.0" />
+              </font></PasswordField>
+         <PasswordField fx:id="passwordField2" layoutX="38.0" layoutY="300.0" onKeyPressed="#createAccountEnter" prefWidth="375.0" promptText="CONFIRM PASSWORD" text="">
+              <font>
+                 <Font name="Impact" size="16.0" />
+              </font></PasswordField>
 
- <Button fx:id="createAccountButton" layoutX="38.0" layoutY="350.0" onMouseClicked="#createAccount" styleClass="smallButton" text="Create Account" />
- <Label fx:id="failLabel" styleClass="errorLabel" text="" />
+         <Button fx:id="createAccountButton" layoutX="38.0" layoutY="350.0" onMouseClicked="#createAccount" styleClass="smallButton" text="Create Account" />
+         <Label fx:id="failLabel" styleClass="errorLabel" text="" />
 
-
-</Pane>
+            </children>
+    </Pane>
+</AnchorPane>
