--- a/res/network_fxml/createaccount.fxml
+++ b/res/network_fxml/createaccount.fxml
@@ -16,32 +16,36 @@
     <Pane fx:id="mainPane" layoutX="263.0" layoutY="63.0" prefHeight="400.0" prefWidth="450.0" styleClass="centerPane">
         <children>
 
-         <Label fx:id="accountLabel" layoutX="38.0" layoutY="50.0" styleClass="titleLabel" text="Create Account" />
+         <Label fx:id="accountLabel" layoutX="38.0" layoutY="22.0" styleClass="titleLabel" text="Create Account" />
 
-         <Button fx:id="loginButton" layoutX="342.0" layoutY="350.0" onAction="#returnToLogin" styleClass="smallButton" text="RETURN" />
-         <TextField fx:id="emailTextField" layoutX="38.0" layoutY="100.0" prefHeight="33.0" prefWidth="375.0" promptText="EMAIL" text="">
+         <Button fx:id="loginButton" layoutX="342.0" layoutY="322.0" onAction="#returnToLogin" styleClass="smallButton" text="RETURN" />
+         <TextField fx:id="emailTextField" layoutX="38.0" layoutY="72.0" prefHeight="33.0" prefWidth="375.0" promptText="EMAIL" text="">
               <font>
                  <Font name="Impact" size="16.0" />
               </font></TextField>
-         <TextField fx:id="usernameTextField" layoutX="38.0" layoutY="150.0" prefWidth="375.0" promptText="USERNAME" text="">
+         <TextField fx:id="usernameTextField" layoutX="38.0" layoutY="122.0" prefWidth="375.0" promptText="USERNAME" text="">
               <font>
                  <Font name="Impact" size="16.0" />
               </font></TextField>
-         <TextField fx:id="displayNameTextField" layoutX="38.0" layoutY="200.0" prefWidth="375.0" promptText="DISPLAY NAME" text="">
+         <TextField fx:id="displayNameTextField" layoutX="38.0" layoutY="172.0" prefWidth="375.0" promptText="DISPLAY NAME" text="">
               <font>
                  <Font name="Impact" size="16.0" />
               </font></TextField>
-         <PasswordField fx:id="passwordField1" layoutX="38.0" layoutY="250.0" prefWidth="375.0" promptText="PASSWORD" text="">
+         <PasswordField fx:id="passwordField1" layoutX="38.0" layoutY="222.0" prefWidth="375.0" promptText="PASSWORD" text="">
               <font>
                  <Font name="Impact" size="16.0" />
               </font></PasswordField>
-         <PasswordField fx:id="passwordField2" layoutX="38.0" layoutY="300.0" onKeyPressed="#createAccountEnter" prefWidth="375.0" promptText="CONFIRM PASSWORD" text="">
+         <PasswordField fx:id="passwordField2" layoutX="38.0" layoutY="272.0" onKeyPressed="#createAccountEnter" prefWidth="375.0" promptText="CONFIRM PASSWORD" text="">
               <font>
                  <Font name="Impact" size="16.0" />
               </font></PasswordField>
 
-         <Button fx:id="createAccountButton" layoutX="38.0" layoutY="350.0" onMouseClicked="#createAccount" styleClass="smallButton" text="Create Account" />
-         <Label fx:id="failLabel" styleClass="errorLabel" text="" />
+         <Button fx:id="createAccountButton" layoutX="38.0" layoutY="322.0" onMouseClicked="#createAccount" styleClass="smallButton" text="Create Account" />
+         <Label fx:id="failLabel" layoutX="38.0" layoutY="365.0" prefWidth="100.0" styleClass="errorLabel" text="" textFill="RED">
+            <font>
+               <Font name="Impact" size="16.0" />
+            </font>
+         </Label>
 
             </children>
     </Pane>
