--- a/res/network_fxml/login.fxml
+++ b/res/network_fxml/login.fxml
@@ -27,7 +27,10 @@
             </font></PasswordField>
    
                <Button fx:id="loginButton" layoutX="38.0" layoutY="226.0" onMouseClicked="#login" styleClass="smallButton" text="LOGIN" />
-               <Label fx:id="loginFailLabel" layoutX="425.0" layoutY="380.0" prefHeight="17.0" prefWidth="63.0" styleClass="errorLabel" text="" />
+               <Label fx:id="loginFailLabel" layoutX="267.0" layoutY="273.0" prefHeight="17.0" prefWidth="63.0" styleClass="errorLabel" text="" textFill="#ff0404">
+            <font>
+               <Font name="Impact" size="16.0" />
+            </font></Label>
    
                <Button fx:id="createAccountButton" layoutX="38.0" layoutY="267.0" onMouseClicked="#openCreateAccount" styleClass="smallButton" text="CREATE ACCOUNT" />
                <Button fx:id="forgotPasswordButton" layoutX="267.0" layoutY="226.0" onMouseClicked="#sendResetEmail" styleClass="smallButton" text="FORGOT PASSWORD" />
